--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
